@@ -1,0 +1,19 @@
+local itaData = {
+	itahq = {
+        spread = 200,
+        units = {
+            "ita_platoon_bersaglieri",
+            "itastorage",
+            "itabreda20_stationary_base",
+            "itabreda20_stationary_base",
+            "itabreda20_stationary_base",
+            "itacannone65",
+            "itahqengineer",
+            "itacannone47_truck",
+            "itacannone47_truck",
+            "ita_sortie_recon",
+        },
+    },
+}
+
+return itaData
