@@ -1,0 +1,20 @@
+local jpnData = {
+	jpnhq = {
+        spread = 200,
+        units = {
+            "jpn_platoon_rifle",
+            "jpn_tankette_platoon_teke",
+            "jpnstorage",
+            "jpntype98_20mm_stationary_base",
+            "jpntype98_20mm_stationary_base",
+            "jpntype98_20mm_stationary_base",
+            "jpnobserv",
+            "jpnhqengineer",
+            "jpntype1_47mm_truck",
+            "jpntype1_47mm_truck",
+            "jpn_sortie_recon",
+        },
+    },
+}
+
+return jpnData
