@@ -10,7 +10,7 @@ local AirRocketClass = Weapon:New{
   gravityaffected    = true,
   heightBoostFactor  = 0,
   impulseFactor      = 0,
-  leadLimit		= 0,
+  leadLimit		= 400,
   model              = [[Rocket_HVAR.S3O]],
   soundHitDry        = [[GEN_Explo_2]],
   soundStart         = [[GER_Panzerschrek]],
