@@ -113,6 +113,7 @@ local MG42AA = MG42:New{
   canAttackGround    = false,
   predictBoost       = 0.25,
   movingAccuracy     = 800,
+  reloadTime         = 5.1,
   range              = 930,
   sprayAngle         = 460,
   customparams = { 
@@ -155,6 +156,7 @@ local MaximAA = Maxim:New{
   burstRate          = 0.103,
   canAttackGround    = false,
   movingAccuracy     = 800,
+  reloadTime         = 5.2,
   predictBoost       = 0.25,
   range              = 800,
   customparams = {
@@ -271,7 +273,7 @@ local TE4 = MGClass:New{
   name               = [[7.7mm TE-4 Machinegun]],
   range              = 925,
   predictBoost       = 0.2,
-  reloadTime         = 1.5,
+  reloadTime         = 3,
   soundStart         = [[JPN_TE4_MG]],
   weaponType         = [[Cannon]],
   customparams = {
@@ -312,14 +314,14 @@ local M2Browning = HeavyMGClass:New{
 }
 -- M2 Browning AA
 local M2BrowningAA = M2Browning:New{
-  accuracy	     = 600,
-  burst              = 3,
+  accuracy	     = 400,
+  burst              = 6,
   canAttackGround    = false,
   movingAccuracy     = 1200,
   predictBoost       = 0.25,
   range              = 920,
   sprayAngle        = 250,
-  reloadTime         = 0.375,
+  reloadTime         = 1.8,
   customparams = {
     no_range_adjust    = true,
     fearid             = 701,
@@ -360,7 +362,7 @@ local BredaM1931AA = BredaM1931:New{
   movingAccuracy     = 800,
   predictBoost       = 0.25,
   range              = 1050,
-  reloadTime         = 1.5,
+  reloadTime         = 3,
   sprayAngle         = 300,
   customparams = {
     no_range_adjust    = true,
@@ -403,7 +405,7 @@ local Type93AA = Type93HMG:New{
   movingAccuracy     = 800,
   predictBoost       = 0.25,
   range              = 1050,
-  reloadTime         = 1.5,
+  reloadTime         = 3,
   sprayAngle         = 300,
   customparams = {
     no_range_adjust    = true,
